--- a/src/picker/assets/scss/style.scss
+++ b/src/picker/assets/scss/style.scss
@@ -127,12 +127,12 @@
   position: relative;
   height: 24px;
   opacity: 0.7;
-  overflow: hidden;
   cursor: pointer;
   font-size: 16px;
 
   > span {
     display: inline-block;
+    margin-left: -10px;
     padding: 0 10px;
     line-height: 22px;
     height: 22px;
@@ -327,6 +327,8 @@
 }
 
 .#{$prefix}actions {
+  display: flex;
+  justify-content: space-between;
   text-align: right;
   padding: 8px;
 
@@ -427,8 +429,30 @@
   color: #444;
   font-family: sans-serif;
   text-align: center;
+  opacity: .5;
   cursor: pointer;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity .3s ease;
+  &:after,
+  &:before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    width: 18px;
+    height: 2px;
+    background-color: #000;
+  }
+  &:before {
+    transform: translate(-50%,-50%) rotate(45deg);
+  }
+  &:after {
+    transform: translate(-50%,-50%) rotate(-45deg);
+  }
+  &:hover {
+    opacity: 1;
+  }
 }
 
 .#{$prefix}time {
