--- a/src/picker/assets/scss/style.scss
+++ b/src/picker/assets/scss/style.scss
@@ -300,6 +300,7 @@
   top: 0;
   left: $month-label-height;
   right: $month-label-height;
+  max-width: 120px;
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
